crates/macros/tests/from_ref/fail/generics.stderr
error: `#[derive(FromRef)]` doesn't support generics
 --> tests/from_ref/fail/generics.rs:4:18
  |
4 | struct AppContext<T> {
  |                  ^^^
